--- a/extra.tex
+++ b/extra.tex
@@ -129,7 +129,7 @@ This section includes the following magnet strength scans: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Magnet Scan: $\overline T$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $\overline T$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -199,7 +199,7 @@ This section includes the following magnet strength scans: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Magnet Scan: $\overline n$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $\overline n$ vs.\ $B_0$} ~\\
 
 \end{figure*}
 
@@ -270,7 +270,7 @@ This section includes the following magnet strength scans: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Magnet Scan: $I_P$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $I_P$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -340,7 +340,7 @@ This section includes the following magnet strength scans: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Magnet Scan: $R_0$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $R_0$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -410,7 +410,7 @@ This section includes the following magnet strength scans: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Magnet Scan: $\overline p$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $\overline p$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -480,7 +480,7 @@ This section includes the following magnet strength scans: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Magnet Scan: $\tau_E$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $\tau_E$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -550,7 +550,7 @@ This section includes the following magnet strength scans: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Magnet Scan: $\eta_{CD}$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $\eta_{CD}$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -620,7 +620,7 @@ This section includes the following magnet strength scans: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Magnet Scan: $f_{BS}$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $f_{BS}$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -690,7 +690,7 @@ This section includes the following magnet strength scans: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Magnet Scan: $W_M$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $W_M$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -760,7 +760,7 @@ This section includes the following magnet strength scans: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Magnet Scan: $C_W$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $C_W$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -830,7 +830,7 @@ This section includes the following magnet strength scans: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Magnet Scan: $q_{DV}$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $q_{DV}$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -900,7 +900,7 @@ This section includes the following magnet strength scans: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Magnet Scan: $(\beta_N)_{norm}$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $(\beta_N)_{norm}$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -970,7 +970,7 @@ This section includes the following magnet strength scans: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Magnet Scan: $(q_{95})_{norm}$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $(q_{95})_{norm}$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -1040,7 +1040,7 @@ This section includes the following magnet strength scans: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Magnet Scan: $(P_W)_{norm}$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $(P_W)_{norm}$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -1110,7 +1110,7 @@ This section includes the following magnet strength scans: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Magnet Scan: $P_F$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $P_F$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -1180,7 +1180,7 @@ This section includes the following magnet strength scans: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Magnet Scan: $b$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $b$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -1250,7 +1250,7 @@ This section includes the following magnet strength scans: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Magnet Scan: $c$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $c$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -1320,7 +1320,7 @@ This section includes the following magnet strength scans: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Magnet Scan: $d$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $d$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -1390,7 +1390,7 @@ This section includes the following magnet strength scans: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Magnet Scan: $h_{CS}$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $h_{CS}$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -1460,7 +1460,7 @@ This section includes the following magnet strength scans: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Magnet Scan: $R_{CS}$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $R_{CS}$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -1553,7 +1553,7 @@ This section includes the following cost sensitivity studies: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Cost Sensitivity: $H$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $H$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -1623,7 +1623,7 @@ This section includes the following cost sensitivity studies: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Cost Sensitivity: $Q$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $Q$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -1693,7 +1693,7 @@ This section includes the following cost sensitivity studies: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Cost Sensitivity: $\tau_{FT}$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $\tau_{FT}$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -1763,7 +1763,7 @@ This section includes the following cost sensitivity studies: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Cost Sensitivity: $N_G$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $N_G$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -1833,7 +1833,7 @@ This section includes the following cost sensitivity studies: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Cost Sensitivity: $f_D$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $f_D$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -1903,7 +1903,7 @@ This section includes the following cost sensitivity studies: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Cost Sensitivity: $Z_{eff}$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $Z_{eff}$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -1973,7 +1973,7 @@ This section includes the following cost sensitivity studies: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Cost Sensitivity: $\varepsilon$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $\varepsilon$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -2043,7 +2043,7 @@ This section includes the following cost sensitivity studies: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Cost Sensitivity: $\kappa_{95}$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $\kappa_{95}$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -2113,7 +2113,7 @@ This section includes the following cost sensitivity studies: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Cost Sensitivity: $\delta_{95}$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $\delta_{95}$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -2183,7 +2183,7 @@ This section includes the following cost sensitivity studies: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Cost Sensitivity: $\nu_n$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $\nu_n$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -2253,7 +2253,7 @@ This section includes the following cost sensitivity studies: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Cost Sensitivity: $\nu_T$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $\nu_T$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -2323,7 +2323,7 @@ This section includes the following cost sensitivity studies: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Cost Sensitivity: $l_i$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $l_i$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -2393,7 +2393,7 @@ This section includes the following cost sensitivity studies: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Cost Sensitivity: $(\beta_N)_{max}$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $(\beta_N)_{max}$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -2463,7 +2463,7 @@ This section includes the following cost sensitivity studies: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Cost Sensitivity: $({q_{95}})_{max}$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $({q_{95}})_{max}$ vs.\ $B_0$} ~\\
 \end{figure*}
 
 
@@ -2533,10 +2533,15 @@ This section includes the following cost sensitivity studies: ~
         \caption{ACT II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption[]{Cost Sensitivity: $({P_W})_{max}$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $({P_W})_{max}$ vs.\ $B_0$} ~\\
 \end{figure*}
 
-
+\newpage
+\vspace*{\fill}
+\begin{center}
+This page intentionally left blank.
+\end{center} ~
+\vspace{\fill}
 
 
 
