--- a/intro.tex
+++ b/intro.tex
@@ -39,7 +39,7 @@
 
 \section{Distinguishing Pulsed from Steady-State}
 
-\added{The leading candidate for the first economic, power-producing fusion reactor is a tokamak. As shown in \cref{fig:fusion_reactor}, tokamaks are doughnut-shaped metal structures that use magnets to confine their fusion-grade plasmas. The challenge in building such a device comes from the various physics and engineering constraints it must satisfy -- i.e.\ not surpassing acceptable levels of neutron damage, plasma pressure, etc.}
+\added{The leading candidate for the first economically competitive fusion reactor is a tokamak. As shown in \cref{fig:fusion_reactor}, tokamaks are doughnut-shaped metal structures that use magnets to confine their fusion-grade plasmas. The challenge in building such a device comes from the various physics and engineering constraints it must satisfy -- i.e.\ not surpassing acceptable levels of neutron damage, plasma pressure, etc.}
 
 \added{One of the most contentious points of reactor design, however, is whether to run it as: pulsed (the European effort\cite{eupulsed,eupulsed_2}) or steady-state (the American/Asian approach\cite{ussteady,kstar}). Here, pulsed operation refers to how a reactor is ramped up and down several times a day. Whereas steady-state implies a machine is functionally kept ramped up the entirety of its fifty-year campaign. These behaviors are shown in \cref{fig:pulses}. The difficulties involved with the two modes of operation are then: cyclical stresses for pulsed devices and expensive current drive for steady state ones.\cite{jeff}}
 
@@ -110,7 +110,7 @@
 
 To \added{truly} compare tokamaks used as fusion \replaced{reactors, though,}{reactors} the obvious metrics are costs. ITER -- the \deleted{second}most expensive experiment \replaced{in the world\cite{nyt,bloomberg}}{today (only behind the LHC)} -- has a history \replaced{full of}{rich in} countries backing out for high \replaced{construction costs}{price tags} and rejoining only \replaced{after}{when} they finally get lowered.\cite{jeff} The problem is \$20B is a lot of money and 20 years is a long time. Moreover, approximating true costs \replaced{of the experiment is made difficult due to the}{becomes even trickier when designers} need to project (or neglect)  economies-of-scale for expensive components, such as the \added{superconducting} magnets and irradiated materials.
 
-\replaced{Therefore,}{As such,} this paper adopts stand-ins for the conventional capital cost and cost-per-watt metrics. This is done for simplicity, \replaced{both in:}{for both:} \replaced{formulating the relations and}{modeling reasons as well as} conveying the two metrics to physicists. \replaced{The approximation for the}{To begin, the relevant approximation for} capital cost -- how much a tokamak costs to build -- is the magnetic energy. \cite{griffiths}
+\replaced{Therefore,}{As such,} this paper adopts stand-ins for the conventional capital cost and cost-per-watt metrics. This is done for simplicity, \replaced{both in:}{for both:} \replaced{formulating the relations and}{modeling reasons as well as} conveying the two metrics to physicists. \replaced{The approximation for the}{To begin, the relevant approximation for} capital cost -- how much a tokamak costs to build -- is then the magnetic energy. \cite{griffiths}
 \begin{equation}
 	\tcboxmath{
 	W_M \propto R^3 B^2
@@ -136,7 +136,7 @@ The next metric, the cost-per-watt, is defined by dividing the capital cost (i.e
 	\label{eq:c_w}
 \end{equation}
 \myequations{Cost-per-Watt -- $C_W$}
-\added{For a steady-state reactor, this duty factor is assumed to be held at one. Pulsed machines, on the other hand, can see around thirty minutes of downtime,\cite{inputfile} which leads to duty factors around 80\%. Analysis in \cref{section:pulse}, however, shows that pulsed reactors may also have duty factors near unity.}
+\added{For a steady-state reactor, this duty factor is assumed to be held at one. Pulsed machines, on the other hand, can see up to thirty minutes of downtime,\cite{inputfile} which leads to duty factors around 80\%. Analysis in \cref{section:pulse}, however, shows that pulsed reactors may also have duty factors near unity.}
 
 \deleted{It serves as a cornerstone for comparing the entire landscape of tokamak reactors -- whether they run in pulsed or steady-state operation. Although not a true engineering cost metric (i.e.\ in dollars per watt), it does provide an obvious physics meaning. Coupled with the magnetic energy stand-in for capital cost, these two costs allow researchers to pinpoint profitable and inexpensive tokamaks within reactor space.}
 
@@ -146,15 +146,15 @@ The next metric, the cost-per-watt, is defined by dividing the capital cost (i.e
 
 Before reactors can be \replaced{priced}{costed}, though, they have to be modeled. Therefore the first half of this thesis is devoted to the theory behind tokamak design. \replaced{Emphasis}{A priority} is placed more on a physicist's intuition than an engineer's costing rigor. This is justified by the nonlinearities inherent \replaced{to}{to the} fusion systems and rationalized by this paper's results matching more sophisticated \replaced{models}{frameworks} with high fidelity.
 
-\added{Stepping back, a fusion systems model is an approach to designing reactors based on satisfying various physics and engineering constraints. There are many of these models in the field.\cite{hartmann,process,arc,minervini,helios,sycomore,fresco,aries,plasmod} Zero-dimensional (0-D) systems models are then a particular subclass of these that reduce the inherently 3-D problem of design to a collection of scalar, averaged values. This reduction in complexity allows models to be orders of magnitude faster. The natural corollary of this is that hundreds of reactors can be simulated in minutes.}
+\added{Stepping back, however, a fusion systems model is an approach to designing reactors based on satisfying various physics and engineering constraints. There are already many of these models in the field.\cite{hartmann,process,arc,minervini,helios,sycomore,fresco,aries,plasmod} Zero-dimensional (0-D) systems models then form a particular subclass of these that reduce the inherently 3-D problem of design to a collection of scalar, averaged values. This reduction in complexity allows models to be orders of magnitude faster. The natural corollary of which is that hundreds of reactors can be simulated in minutes.}
 
 \added{Within the context of reactor design, these 0-D systems models serve an important role due to their speed and simplicity. Although not truly self-consistent,}\footnote{For speed concerns, 0-D fusion systems models often ignore self consistency in quantities like pressure profiles and use empirical fits to estimate values such as the confinement time.} \added{these models are capable of exploring large areas of reactor space. This is especially important in the early stages of tokamak planning when researchers are selecting a design point. These models also have use when searching for general costing trends -- as shown in this document.}
 
-What makes this paper's \added{systems} model different from \replaced{other ones, though,}{others in the field} is \replaced{its}{the} generalized handling of both modes of tokamak operation: pulsed and steady-state. This was necessitated by a desire to \added{fairly} compare the \replaced{two.}{two modes on a level playing field.} \replaced{The most fundamental result of this analysis is that both modes are actually capable of leading to economically competitive reactors}{What this shows is that both pulsed and steady-state tokamaks could make for profitable fusion reactors} -- assuming some technological advancements.
+What makes this paper's \added{systems} model different from \replaced{others in the field, though,}{others in the field} is \replaced{its}{the} generalized handling of both modes of tokamak operation: pulsed and steady-state. This was necessitated by a desire to \added{fairly} compare the \replaced{two.}{two modes on a level playing field.} \replaced{The most fundamental result of this analysis is that both modes are actually capable of leading to economically competitive reactors}{What this shows is that both pulsed and steady-state tokamaks could make for profitable fusion reactors} -- assuming some technological advancements. 
 
 \section{Discussing HTS Magnet Technology}
 
-\added{As mentioned, no economically competitive fusion reactor can be built using existing technology -- regardless of whether it runs as pulsed or steady-state. This is why MIT has been exploring HTS magnet technology for their ARC reactor in an effort to nearly double the maximum achievable field strength. What this paper shows is that this logic is indeed correct and HTS may be the final magnet advancement needed for the conventional fusion paradigm (i.e.\ D-T fuel, H-Mode, etc.)}
+\added{As mentioned, no economically competitive fusion reactor can be built using existing technology -- regardless of whether it runs as pulsed or steady-state. This is why MIT has been exploring HTS magnet technology for their SPARC reactor in an effort to nearly double the maximum achievable field strength. What this paper shows is that this logic is indeed correct and HTS may be the final magnet advancement needed for the conventional fusion paradigm (i.e.\ D-T fuel, H-Mode, etc.)}
 
 \deleted{One technological advancement that could lead to major wins is improving magnet components. This is why MIT has championed high-field designs for the better part of the last century. In their latest effort, the PSFC team has explored new high-temperature superconducting (HTS) tape capable of doubling the maximum achievable field strength. What this paper shows is that this logic is indeed correct and that HTS tape is all that is needed to build optimum reactors.}
 
