--- a/main.tex
+++ b/main.tex
@@ -76,7 +76,7 @@
 
 \setlength{\jot}{2.25ex}
 
-%\includeonly{conclusion,cover,contents}
+%\includeonly{extra,biblio,cover,contents}
 
 \interfootnotelinepenalty=10000
 
@@ -92,7 +92,7 @@
 
 \hyphenpenalty=250
 
-\begin{document}
+\begin{document} 
 
 %\listofchanges
 
@@ -112,7 +112,9 @@
 \appendix
 
 \include{variables}
+\hyphenpenalty=50
 \include{fussy}
+\hyphenpenalty=250
 \include{power}
 \include{appa}
 \include{surfaces}
@@ -121,13 +123,6 @@
 \include{extra}
 
 \include{biblio}
-
-%\newpage
-%\vspace*{\fill}
-%\begin{center}
-%This page intentionally left blank.
-%\end{center} ~
-%\vspace{\fill}
  
 \end{document}
 
