--- a/steady.tex
+++ b/steady.tex
@@ -59,7 +59,7 @@ The first thing people see when they look at a tokamak is its geometry \added{--
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\
     \caption{Geometry of a Tokamak} ~ \\
-    \small{This diagram is of a tokamak's toroidal (top) view and the poloidal cross section of a slice across its major axis. Included are the four components of a reactor: the plasma, it's metallic blanket, the toroidal field magnets surrounding them, and the central solenoid. These have thicknesses of a, b, c and d, respectively. $R_{CS}$ is where the solenoid starts.}
+    \small{This diagram is of a tokamak's toroidal (top) view and the poloidal cross section of a slice across its major axis. Included are the four components of a reactor: the plasma, its metallic blanket, the toroidal field magnets surrounding them, and the central solenoid. These have thicknesses of a, b, c and d, respectively. $R_{CS}$ is where the solenoid begins.}
     \label{fig:views}
 \end{figure*}
 
@@ -397,7 +397,7 @@ Quickly noting, this $H_{BS}$ term serves as the analogue of \replaced{static}{f
 
 \deleted{The final point to make before returning to the fusion power derivation is the main difference between the two fusion products: helium (i.e.\ the alpha particle) and the neutron. First, neutrons lack a charge -- they are neutral. This means they cannot be confined with magnetic fields. As such, they simply move in straight lines until they collide with other particles. As the structure of a tokamak is mainly metal, the neutron is much more likely to collide there than the gaseous plasma, which is orders of magnitude less dense. Conversely, alpha particles are charged -- when stripped of their electrons -- and can therefore be kept within the plasma using magnets. What this means practically is that of the 17.6 MeV that comes from every fusion reaction, only 3.5 MeV remains inside the plasma (within the helium particle species).}
 
- \added{The next segue on our journey to solving for the steady current is deriving the fusion power ($P_F$), which appears in current drive. A comprehensive introduction to this is given in \cref{chapter:power}.} \replaced{Summarized, though, a formula for}{Returning to the problem at hand, the} fusion power from a D-T reaction -- in megawatts -- is given by \replaced{the following volume integral: \cite{lawson} }{ Jeff Freidberg's textbook through the following volume integral: }
+ \added{The next segue on our journey to solving for the steady current is deriving the fusion power ($P_F$), which appears in current drive. A comprehensive introduction to this is given in \cref{chapter:power}.} \replaced{Summarized, however, a formula for}{Returning to the problem at hand, the} fusion power from a D-T reaction -- in megawatts -- is given by \replaced{the following volume integral: \cite{lawson} }{ Jeff Freidberg's textbook through the following volume integral: }
  \begin{gather}
  	\label{eq:pf_int}
  	P_F = \int E_F \, n_D \, n_T \, \langle \sigma v \rangle \, d \vec{\bold{r}} \\
@@ -405,12 +405,12 @@ Quickly noting, this $H_{BS}$ term serves as the analogue of \replaced{static}{f
 	E_F = 17.6 \ \textnormal{MeV}
 	}
 \end{gather}
-\added{The $E_F$ quantity is the energy created from a deuterium-tritium fusion reaction.} The $n_D$ and $n_T$ in this equation \added{then} represent the density of the deuterium and tritium ions, respectively. Assuming a 50-50 mix of the two, they can be related to the electron density -- i.e.\ the one used in this model -- through the dilution factor \added{($f_D$). This dilution factor represents the decrease in available fuel from part of the plasma actually being composed of non-hydrogen gasses}:
+\added{This $E_F$ quantity is the energy created from a deuterium-tritium fusion reaction.} The $n_D$ and $n_T$ variables \added{then} represent the density of the deuterium and tritium ions, respectively. Assuming a 50-50 mixture of the two, they can be related to the electron density -- i.e.\ the one used in this model -- through the dilution factor \added{($f_D$). This dilution factor represents the decrease in available fuel from part of the plasma actually being composed of non-hydrogen gasses}:
 \begin{equation}
 	n_D = n_T = f_D \cdot \left( \frac{n}{2} \right)
 \end{equation}
 \myequations{Dilution Factor -- $f_{D}$}
- The fusion reactivity, $\langle \sigma v \rangle$, is then a nonlinear function of the temperature, T, which the model approximates using the Bosch-Hale tabulation (described in \cref{chapter:power}). As this tabulated value appears inside an integral, it seems important to point out that the temperature is now the most difficult \replaced{dynamic}{floating} variable to handle -- over $R_0$, $B_0$, $\overline n$, and $I_P$. This will come into play when the model is formalized next chapter.
+ Lastly, the fusion reactivity, $\langle \sigma v \rangle$, is a nonlinear function of the temperature, T, which the model approximates using the Bosch-Hale tabulation (described in \cref{chapter:power}). As this tabulated value appears inside an integral, it seems important to point out that the temperature is now the most difficult \replaced{dynamic}{floating} variable to handle -- over $R_0$, $B_0$, $\overline n$, and $I_P$. This will come into play when the model is formalized next chapter. 
 
  The next step in the derivation of fusion power is transforming the three-dimensional volume integral (see Eq. \ref{eq:pf_int}) into a zero-dimension averaged value. First, the volume integral for this model's geometry is given by:
  \begin{equation}
@@ -526,7 +526,7 @@ Although a thorough description of the wave theory behind lower-hybrid current d
 
 The logic behind finding a self-consistent current-drive efficiency is starting at some plausible value (i.e.\ $\eta_{CD} = 0.3$), solving for the steady current -- i.e.\ $I_P = f(\overline T)$ -- and then somehow iteratively creeping towards a value deemed self-consistent. What this means is that in addition to the solver described in the last section, there needs to be a black-box function that solutions are \replaced{sent}{piped} through to get better guesses at $\eta_{CD}$. The black-box function we use is a variation of the Ehst-Karney model. \cite{ehstkarney} \added{A thorough description of this algorithm is given in \cref{chapter:lhcd}.}
 
-As mentioned, a self-consistent $\eta_{CD}$ is found once a trip through the Ehst-Karney black-box results in the same $\eta_{CD}$ as was \replaced{sent}{piped} in -- to some tolerable level of error. This consistency incorporates an explicit dependence on the tokamak configuration. Mathematically,
+As mentioned, though, a self-consistent $\eta_{CD}$ is found once a trip through the Ehst-Karney black-box results in the same $\eta_{CD}$ as was \replaced{sent}{piped} in -- to some tolerable level of error. This consistency incorporates an explicit dependence on the tokamak configuration. Mathematically,
 \begin{equation}
 	\tilde \eta_{CD} = f( R_0, B_0, \overline n, \overline T, I_P )
 \end{equation}
